--- a/germax-frontend/src/templates/components/header/index.html
+++ b/germax-frontend/src/templates/components/header/index.html
@@ -1,17 +1,18 @@
 <header>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-	<div class="container-fluid">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+		<div class="container-fluid">
 			<a class="navbar-brand" href="#">GERMALOC</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
+			<button class="navbar-toggler" type="button" aria-controls="navbarNav" aria-expanded="false"
+				aria-label="Toggle navigation" id="navbar-toggler">
+				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav ms-auto">
-						<li class="nav-item">
-							<button class="btn btn-auth" id="logoutButton">Déconnexion</button>
-						</li>
-					</ul>
+				<ul class="navbar-nav ms-auto">
+					<li class="nav-item">
+						<!-- Дополнительные элементы навигации -->
+					</li>
+				</ul>
 			</div>
-	</div>
-</nav>
+		</div>
+	</nav>
 </header>
