--- a/germax-frontend/src/templates/components/back-arrow/index.css
+++ b/germax-frontend/src/templates/components/back-arrow/index.css
@@ -1,5 +1,5 @@
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css);
-/* Основные цвета */
+/* Couleurs principales */
 :root {
 	--primary-color: #E7717D;
 	--secondary-color: #C2CAD0;
