--- a/germax-frontend/src/templates/components/content-page-bookings-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-bookings-management/index.html
@@ -5,9 +5,9 @@
 		<a class="nav-link active" id="active-booking-tab" data-bs-toggle="tab" href="#requestBookingsManagement" role="tab"
 			aria-controls="requestBookingsManagement" aria-selected="true">Gestion des demandes de réservations </a>
 
-		<!-- Содержимое вкладок -->
+		<!-- onglets -->
 		<div class="tab-content" id="equipmentTabsContent">
-			<!-- Вкладка запрос оборудования -->
+			<!-- demande d'équipement -->
 			<div class="tab-pane fade show active" id="requestBookingsManagement" role="tabpanel"
 				aria-labelledby="request-bookings-management-tab">
 				<div class="row">
@@ -33,7 +33,6 @@
 								</tr>
 							</thead>
 							<tbody>
-								<!-- Предположим, что это оборудование с ID 1 -->
 								<tr data-booking-id="1">
 									<td>1</td>
 									<td>1</td>
@@ -168,7 +167,7 @@
 </div>
 
 
-<!-- Modal для подтверждения выдачи -->
+<!-- Modal pour confirmer la remise -->
 <div class="modal fade" id="confirmHandOverModal" tabindex="-1" aria-labelledby="confirmHandOverModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -187,7 +186,7 @@
   </div>
 </div>
 
-<!-- Modal для возврата оборудования -->
+<!-- Modal pour retourner le matériel -->
 <div class="modal fade" id="reportReturnModal" tabindex="-1" aria-labelledby="reportReturnModalLabel" aria-hidden="true">
 	<div class="modal-dialog">
 			<div class="modal-content">
