--- a/germax-frontend/src/templates/components/content-page-dashboard/index.html
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.html
@@ -1,7 +1,7 @@
 <div class="row g-0">
 	<div class="col-md-3">
 		<div class="list-group">
-			<!-- вертикальное меню слева -->
+			<!-- menu vertical -->
 			<div id="dynamicMenu"></div>
 		</div>
 	</div>
@@ -15,7 +15,7 @@
 			<div id="divider"></div>
 			<div id="userNotifications"></div>
 		</div>
-		<!-- Содержимое для студентов и преподавателей -->
+		<!-- pour étudiants et enseignants -->
 		<div id="tabPlace"></div>
 		<div id="myLoans"></div>
 		<div id="clientLoansHistory"></div>
@@ -23,11 +23,11 @@
 		<div id="modalRequestLoan"></div>
 		<div id="modalLoanForm"></div>
 		<div id="modalClientLoans"></div>
-		<!-- Содержимое для админа -->
+		<!-- contenu pour l'admin -->
 		<div id="adminReportsModal"></div>
 		<div id="adminFeedBackModal"></div>
 		<div id="adminContainerSettingsModal"></div>
-		<!-- Содержимое для кладовщика -->
+		<!-- pour le gestionnaire -->
 		<div id="profileContainer"></div>
 	</div>
 </div>
