--- a/germax-frontend/src/templates/components/content-page-loan-equipment/index.html
+++ b/germax-frontend/src/templates/components/content-page-loan-equipment/index.html
@@ -4,9 +4,6 @@
 	<form class="jumbotron mt-4">
 		<div class="input-group mb-3">
 			<input type="text" class="form-control" id="model-search" placeholder="Rechercher par modèle">
-			<!-- <div class="input-group-append">
-				<button class="btn btn-outline-secondary" type="submit" id="search-button">Rechercher</button>
-			</div> -->
 		</div>
 		<div class="container-fluid">
 			<div class="row">
@@ -25,7 +22,7 @@
 				</div>
 				<div class="col-md-9">
 					<div class="equipment-list" id="equipment-list">
-						<!-- Сюда будут загружаться результаты -->
+						<!-- les résultats seront ici -->
 					</div>
 				</div>
 			</div>
