--- a/germax-frontend/src/templates/components/content-page-bookings-management/index.css
+++ b/germax-frontend/src/templates/components/content-page-bookings-management/index.css
@@ -8,19 +8,17 @@
 	--quaternary-color: #7E685A;
 	--accent-color: #AFD275;
 }
-/* Основные стили для контейнера */
+
 .container {
-	padding-top: 60px; /* Отступ сверху для фиксированного хедера */
+	padding-top: 60px;
 	padding-bottom: 20px;
 }
 
-/* Заголовок */
 h1.mb-3 {
 	color: var(--quaternary-color);
 	margin-bottom: 20px;
 }
 
-/* Стили для фильтров */
 .form-select,
 .form-control {
 	background-color: var(--secondary-color);
@@ -45,7 +43,6 @@ h1.mb-3 {
 	background-color: var(--quaternary-color);
 }
 
-/* Стили для таблицы */
 .table {
 	background-color: white;
 	border-radius: 5px;
@@ -69,7 +66,6 @@ h1.mb-3 {
 	color: var(--primary-color);
 }
 
-/* Стили для навигационных вкладок */
 .nav-tabs .nav-link {
 	color: var(--quaternary-color);
 	background-color: var(--secondary-color);
@@ -84,7 +80,6 @@ h1.mb-3 {
 	border: 1px solid var(--primary-color);
 }
 
-/* Стили для модальных окон */
 .modal-content {
 	background-color: var(--secondary-color);
 	border-radius: 10px;
@@ -118,7 +113,6 @@ h1.mb-3 {
 	background-color: var(--quaternary-color);
 }
 
-/* Стили для кнопок в выпадающих меню */
 .dropdown-menu .dropdown-item {
 	color: var(--quaternary-color);
 }
@@ -142,7 +136,6 @@ h1.mb-3 {
 	color: white;
 }
 
-/* retour en arrière */
 .btn-back {
 	color: #7E685A !important;
 	margin-top: 75px;
@@ -174,30 +167,29 @@ h1.mb-3 {
 	background-color: var(--accent-color);
 }
 
-/* retour en arrière */
 #backArrowContainer {
 	position: fixed;
-	top: 40px; /* Отрегулируйте это значение по необходимости */
-	left: 10px; /* Почти прижата к левому краю страницы */
+	top: 40px;
+	left: 10px;
 	z-index: 1000;
 }
 
 .back-arrow {
-	font-size: 20px; /* Сделаем кнопку жирнее */
+	font-size: 20px;
 	color: var(--primary-color);
 	text-decoration: none;
 	display: flex;
 	align-items: center;
-	transition: color 0.3s ease, opacity 0.3s ease; /* Добавим плавный переход для непрозрачности */
+	transition: color 0.3s ease, opacity 0.3s ease;
 	padding: 10px;
 	border-radius: 5px;
-	opacity: 0.3; /* Полупрозрачная кнопка */
+	opacity: 0.3;
 }
 
 .back-arrow:hover {
 	color: var(--accent-color);
 	text-decoration: underline;
-	opacity: 1; /* Увеличим непрозрачность при наведении */
+	opacity: 1;
 }
 
 .back-arrow i {
