--- a/germax-frontend/src/templates/components/content-page-client-management/index.css
+++ b/germax-frontend/src/templates/components/content-page-client-management/index.css
@@ -1,7 +1,6 @@
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css);
 
-/* Общие стили для основных цветов */
 :root {
 	--color-primary: #E7717D;
 	--color-secondary: #C2CAD0;
@@ -23,10 +22,9 @@ body {
 
 main {
 	flex: 1;
-	padding-top: 70px; /* Высота вашего хедера */
+	padding-top: 70px;
 }
 
-/* Стили для хедера */
 header {
 	background-color: var(--color-primary);
 	color: white;
@@ -37,7 +35,6 @@ header {
 	color: var(--color-primary);
 }
 
-/* Стили для модалок */
 .modal-header {
 	background-color: var(--color-primary);
 	color: white;
@@ -53,7 +50,6 @@ header {
 	color: white;
 }
 
-/* Стили для таблицы */
 .table th {
 	background-color: var(--color-secondary);
 	color: var(--color-quaternary);
@@ -63,7 +59,6 @@ header {
 	color: var(--color-quaternary);
 }
 
-/* Карточки аренды */
 .rental-card {
 	background-color: var(--color-secondary);
 	color: var(--color-quaternary);
@@ -77,14 +72,13 @@ header {
 	color: var(--color-primary);
 }
 
-/* Стили для вкладок навигации */
 .nav-tabs .nav-item .nav-link {
 	color: var(--color-quaternary);
 	background-color: var(--color-secondary);
 	border: 1px solid var(--color-tertiary);
 	border-radius: 0.375rem 0.375rem 0 0;
-	margin-right: 5px; /* Добавить немного пространства между вкладками */
-	padding: 0.5rem 1rem; /* Регулировка отступов для вкладок */
+	margin-right: 5px;
+	padding: 0.5rem 1rem;
 	transition: background-color 0.3s ease, color 0.3s ease;
 }
 
@@ -100,30 +94,29 @@ header {
 	border-color: var(--color-primary);
 }
 
-/* retour en arrière */
 #backArrowContainer {
 	position: fixed;
-	top: 40px; /* Отрегулируйте это значение по необходимости */
-	left: 10px; /* Почти прижата к левому краю страницы */
+	top: 40px;
+	left: 10px;
 	z-index: 1000;
 }
 
 .back-arrow {
-	font-size: 20px; /* Сделаем кнопку жирнее */
+	font-size: 20px;
 	color: var(--color-primary);
 	text-decoration: none;
 	display: flex;
 	align-items: center;
-	transition: color 0.3s ease, opacity 0.3s ease; /* Добавим плавный переход для непрозрачности */
+	transition: color 0.3s ease, opacity 0.3s ease;
 	padding: 10px;
 	border-radius: 5px;
-	opacity: 0.3; /* Полупрозрачная кнопка */
+	opacity: 0.3;
 }
 
 .back-arrow:hover {
 	color: var(--color-accent);
 	text-decoration: underline;
-	opacity: 1; /* Увеличим непрозрачность при наведении */
+	opacity: 1;
 }
 
 .back-arrow i {
