--- a/germax-frontend/src/templates/components/content-page-dashboard/index.css
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.css
@@ -18,7 +18,6 @@
 	background-color: #dc3545;
 }
 
-/* Основные цвета */
 :root {
 	--primary-color: #e7717d;
 	--secondary-color: #c2cad0;
@@ -45,26 +44,20 @@ body {
 
 main {
 	flex: 1;
-	padding-top: 70px; /* Высота вашего хедера */
+	padding-top: 70px;
 }
 
-/* Стили для хедера */
 header {
 	background-color: var(--color-primary);
 	color: white;
 	padding: 1rem;
 }
 
-/* Общие стили для контейнера */
 .container {
-	padding-top: 60px; /* Отступ сверху для фиксированного хедера */
+	padding-top: 60px;
 	padding-bottom: 20px;
 }
 
-/* Стили для навигации */
-/* .navbar {
-	background-color: var(--quaternary-color);
-} */
 
 .navbar-brand {
 	color: var(--primary-color);
@@ -99,22 +92,6 @@ header {
 	background-color: var(--primary-color);
 }
 
-/* Стили для навигации */
-/* .navbar {
-	background-color: var(--quaternary-color);
-} */
-
-/* .navbar-light {
-	background-color: var(--quaternary-color);
-} */
-
-/* Удалить белый фон вокруг элементов */
-/* .navbar-light .navbar-nav .nav-link,
-.navbar-light .navbar-nav .dropdown-menu,
-.navbar-light .navbar-nav .btn-auth {
-	background-color: var(--quaternary-color);
-} */
-
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .dropdown-menu:hover,
 .navbar-light .navbar-nav .btn-auth:hover {
@@ -137,7 +114,6 @@ header {
 	color: var(--quaternary-color);
 }
 
-/* Модальные окна */
 .modal-content {
 	background-color: var(--secondary-color);
 	border-radius: 10px;
@@ -173,7 +149,6 @@ header {
 
 /* réglages */
 
-/* Стили для вкладок настроек */
 .settings-nav .nav-link {
 	color: var(--quaternary-color);
 	background-color: var(--secondary-color);
@@ -193,7 +168,6 @@ header {
 	border-color: var(--primary-color);
 }
 
-/* Стили для содержимого вкладок настроек */
 .settings-tab-content .settings-tab-pane {
 	background-color: var(--secondary-color);
 	border: 1px solid var(--tertiary-color);
@@ -202,7 +176,6 @@ header {
 	padding: 20px;
 }
 
-/* Стили для карточек настроек */
 .settings-card {
 	background-color: var(--secondary-color);
 	border: none;
@@ -214,7 +187,6 @@ header {
 	color: var(--quaternary-color);
 }
 
-/* Стили для форм настроек */
 .settings-card .form-label {
 	color: var(--quaternary-color);
 }
@@ -230,7 +202,6 @@ header {
 	box-shadow: 0 0 5px rgba(231, 113, 125, 0.5);
 }
 
-/* Стили для кнопок настроек */
 .settings-card .btn-primary {
 	background-color: var(--primary-color);
 	color: white;
@@ -251,7 +222,6 @@ header {
 	background-color: var(--accent-color);
 }
 
-/* Стили для текста настроек */
 .settings-card h1,
 .settings-card h2,
 .settings-card h3,
@@ -266,7 +236,6 @@ header {
 	color: var(--quaternary-color);
 }
 
-/* Дополнительные стили для улучшения пользовательского интерфейса */
 .settings-card .mb-2,
 .settings-card .mb-3,
 .settings-card .mb-4,
@@ -280,9 +249,9 @@ header {
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05) !important;
 }
 
-/* Личный кабинет */
+/* dashboard */
 
-/* Стили для секции профиля */
+/* section du profile */
 #profileSection {
 	padding: 20px;
 	background: linear-gradient(
@@ -299,41 +268,41 @@ header {
 }
 
 #profileGreeting {
-	font-size: 2em; /* Увеличенный размер текста */
-	color: #362c26; /* Тёмный цвет из вашей палитры */
+	font-size: 2em;
+	color: #362c26;
 	margin-bottom: 10px;
-	font-weight: bold; /* Выделение текста жирным шрифтом */
-	white-space: pre; /* Сохранение пробелов и переносов строк */
+	font-weight: bold;
+	white-space: pre;
 }
 
 #profileAvatarContainer {
 	position: relative;
 	width: 200px;
 	height: 200px;
-	margin: 20px auto; /* Центрирование контейнера и отступы */
+	margin: 20px auto;
 	border-radius: 50%;
-	border: 2px solid var(--accent-color); /* Зеленая рамка */
+	border: 2px solid var(--accent-color);
 	background-color: var(--secondary-color);
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	z-index: 1; /* Высокий z-index для контейнера аватарки */
+	z-index: 1;
 }
 
 #profileAvatarContainer img {
-	display: none; /* Скрыть изображение по умолчанию */
+	display: none;
 }
 
 #profileAvatarContainer img.show {
-	display: block; /* Показать изображение если есть аватар */
-	width: 100%; /* Убедиться, что изображение заполняет контейнер */
+	display: block;
+	width: 100%;
 	height: 100%;
-	border-radius: 50%; /* Круглая форма */
-	object-fit: cover; /* Обеспечить правильное отображение внутри круга */
+	border-radius: 50%;
+	object-fit: cover;
 }
 
 #avatarPlaceholder.show {
-	display: block; /* Показать текст если нет аватара */
+	display: block;
 }
 
 #profileAvatar {
@@ -341,27 +310,27 @@ header {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	display: none; /* Скрыто по умолчанию */
+	display: none;
 }
 
 #avatarPlaceholder {
-	color: var(--quaternary-color); /* Dark color for the text */
+	color: var(--quaternary-color);
 	text-align: center;
 	font-size: 14px;
-	display: none; /* Hide the text by default */
+	display: none;
 }
 
 #divider {
 	width: calc(
 		100% - 300px
-	); /* Adjust the width to ensure it does not overlap with the sidebar */
+	);
 	height: 4px;
 	background-color: var(--accent-color);
 	position: relative;
-	top: -102px; /* Move it up by half the avatar height and half the divider height */
-	left: 50%; /* Center it horizontally */
-	transform: translateX(-50%); /* Center it horizontally */
-	z-index: 0; /* Lower z-index for the divider */
+	top: -102px;
+	left: 50%;
+	transform: translateX(-50%);
+	z-index: 0;
 	border-radius: 2px;
 	transition: background-color 0.3s ease;
 }
@@ -370,7 +339,6 @@ header {
 	background-color: var(--primary-color);
 }
 
-/* Стили для уведомлений */
 #userNotifications {
 	display: flex;
 	flex-direction: column;
@@ -400,11 +368,10 @@ header {
 
 .user-notification a {
 	text-decoration: none;
-	color: #8bc34a; /* Салатовый цвет из палитры */
+	color: #8bc34a;
 	border-bottom: 1px solid #8bc34a;
 }
 
-/* Стили для вкладки настроек */
 #settingsForm {
 	background-color: var(--secondary-color);
 	padding: 20px;
@@ -444,7 +411,7 @@ header {
 
 .dropdown-item:hover {
 	background-color: var(--primary-color);
-	color: white; /* Optional: to make sure the text color contrasts well with the background */
+	color: white;
 }
 
 @media (max-width: 768px) {
@@ -477,41 +444,38 @@ header {
 	}
 }
 
-/* Базовые стили для скрытия меню */
 .collapse {
-	display: none; /* По умолчанию скрыто */
-	transition: all 0.3s ease-out; /* Плавный переход */
+	display: none;
+	transition: all 0.3s ease-out;
 }
 
-/* Когда меню раскрыто, увеличиваем высоту */
 .collapse.show {
 	display: block !important;
-	max-height: 500px !important; /* Убедитесь, что есть место для содержимого */
-	overflow: visible !important; /* Скрытие содержимого убирается */
+	max-height: 500px !important;
+	overflow: visible !important;
 	transition: max-height 0.3s ease-out;
 }
 
 #horizontalNavbar.show {
-	display: flex !important; /* При открытии flex */
+	display: flex !important;
 	flex-direction: column;
-	transition: all 0.3s ease; /* Плавный переход для любых изменений */
-	z-index: 9999; /* Высокий z-index для отображения поверх других элементов */
+	transition: all 0.3s ease;
+	z-index: 9999;
 }
 
 @media (max-width: 992px) {
-	/* Для корректного раскрытия меню */
 	.navbar-collapse {
-		display: none; /* по умолчанию скрываем */
+		display: none;
 		max-height: 0;
 		overflow: hidden;
 		transition: max-height 0.3s ease-out;
 	}
 
 	.navbar-collapse.show {
-		display: block !important; /* показываем при раскрытии */
-		max-height: 300px; /* или больше, в зависимости от контента */
+		display: block !important;
+		max-height: 300px;
 		transition: max-height 0.3s ease-out;
-		z-index: 999999; /* чтобы элементы отображались поверх */
+		z-index: 999999;
 		background-color: #343a40;
 		width: 100%;
 		right: 0;
@@ -519,9 +483,8 @@ header {
 	}
 }
 
-/* Для самых маленьких экранов (смартфонов) */
+/* pour les tous petits smartphones */
 @media (max-width: 576px) {
-	/* Скрываем навигацию по умолчанию */
 	#horizontalNavbar,
 	.navbar-collapse {
 		display: none;
@@ -530,28 +493,25 @@ header {
 		transition: max-height 0.3s ease-out;
 	}
 
-	/* Когда меню открыто на смартфоне */
 	.navbar-collapse.show,
 	#horizontalNavbar.show {
 		display: block;
-		max-height: 400px; /* Можно увеличить высоту для контента */
-		width: 100%; /* Меню будет на всю ширину экрана */
+		max-height: 400px;
+		width: 100%;
 	}
 
-	/* Кнопка бургера будет справа */
 	.navbar-toggler {
 		position: absolute;
 		right: 0;
 		top: 0;
 	}
 
-	/* Ограничение ширины меню */
 	.navbar-collapse {
 		position: absolute;
 		right: 0;
-		top: 50px; /* Чтобы меню открывалось под кнопкой */
-		width: 100%; /* Меню будет занимать всю ширину экрана */
-		background-color: #343a40; /* Фон меню */
+		top: 50px;
+		width: 100%;
+		background-color: #343a40;
 		z-index: 999;
 	}
 }
