--- a/germax-frontend/src/templates/components/content-page-equipment-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-equipment-management/index.html
@@ -1,10 +1,8 @@
 <div class="container mt-4">
 	<div class="container mt-4">
 		<div class="mb-4">
-			<!-- Search bar for quick search -->
 			<input type="text" class="form-control mb-2" id="quick-search" placeholder="Recherche rapide...">
 
-			<!-- Filters -->
 			<select class="form-control mb-2" id="category-filter">
 				<option value="laptop">Laptop</option>
 				<option value="computer_monitor">Computer Monitor</option>
@@ -12,29 +10,22 @@
 				<option value="accessory">Accessory</option>
 				<option value="tablet">Tablet</option>
 				<option value="VR_headset">VR Headset</option>
-				<!-- нужно добавить чтобы категории динамически обновлялись -->
 			</select>
 			<select class="form-control mb-2" id="availability-filter">
-				<!-- Availability options -->
 				<option value="">Tous les statuts</option>
 				<option value="available">Disponible</option>
 				<option value="unavailable">Non disponible</option>
-				<!-- Add other status options here -->
 			</select>
 			<button class="btn btn-primary" id="apply-filters">Appliquer les filtres</button>
 		</div>
 
-		<!-- Equipment table -->
 
-		<!-- Вкладки для переключения между активным оборудованием и архивом -->
 		<div class="nav nav-tabs" id="equipmentTabs" role="tablist">
 			<a class="nav-link active" id="active-equipment-tab" data-bs-toggle="tab" href="#activeEquipment" role="tab"
 				aria-controls="activeEquipment" aria-selected="true">Equipement actif</a>
 		</div>
 
-		<!-- Содержимое вкладок -->
 		<div class="tab-content" id="equipmentTabsContent">
-			<!-- Вкладка Активное оборудование -->
 			<div class="tab-pane fade show active" id="activeEquipment" role="tabpanel"
 				aria-labelledby="active-equipment-tab">
 				<div class="row">
@@ -55,7 +46,6 @@
 							</thead>
 							<tbody>
 
-								<!-- Предположим, что это оборудование с ID 1 -->
 								<tr data-equipment-id="1" class="">
 									<td>1</td>
 									<td>
@@ -98,7 +88,7 @@
 												<li><a class="dropdown-item toggle-log-button" href="#" data-log-id="actionLog-1">Journal des
 														actions</a></li>
 												<li><a class="dropdown-item" href="#">Réserver</a></li>
-												<!-- только для Админа -->
+												<!-- que pour l'admin -->
 												<li><a class="dropdown-item edit-action" href="#">Modifier les données</a></li>
 											</ul>
 										</div>
@@ -145,7 +135,6 @@
 												<li><a class="dropdown-item toggle-log-button" href="#" data-log-id="actionLog-1">Journal des
 														actions</a></li>
 												<li><a class="dropdown-item" href="#">Réserver</a></li>
-												<!-- только для Админа -->
 												<li><a class="dropdown-item edit-action" href="#">Modifier les données</a></li>
 											</ul>
 										</div>
@@ -192,16 +181,12 @@
 												<li><a class="dropdown-item toggle-log-button" href="#" data-log-id="actionLog-1">Journal des
 														actions</a></li>
 												<li><a class="dropdown-item" href="#">Réserver</a></li>
-												<!-- только для Админа -->
 												<li><a class="dropdown-item edit-action" href="#">Modifier les données</a></li>
 											</ul>
 										</div>
 									</td>
 								</tr>
 
-
-
-								<!-- Скрытая строка для журнала действий -->
 								<div class="modal fade" id="actionLogModal" tabindex="-1" aria-labelledby="actionLogModalLabel"
 									aria-hidden="true">
 									<div class="modal-dialog modal-lg">
@@ -212,15 +197,13 @@
 												<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
 											</div>
 											<div class="modal-body">
-												<!-- Элементы управления -->
 												<div class="filters">
 													<input type="text" id="searchByName" placeholder="Recherche par nom...">
 													<button id="sortByDate">Trier par date</button>
 												</div>
 												<div id="actionLogEntries">
-													<!-- Здесь будут выводиться записи журнала -->
 												</div>
-												<!-- Пагинация -->
+												<!-- pagination -->
 												<div class="pagination">
 													<button id="prevPage">Précédent</button>
 													<span id="currentPage">1</span>
@@ -234,18 +217,16 @@
 										</div>
 									</div>
 								</div>
-								<!-- Повторите структуру выше для каждой единицы оборудования -->
+
 							</tbody>
 						</table>
 					</div>
 				</div>
 			</div>
 
-		<!-- Pagination controls -->
 		<nav>
 			<ul class="pagination">
 				<li class="page-item"><a class="page-link" href="#" id="previous-page">Précédent</a></li>
-				<!-- Page numbers will be dynamically populated -->
 				<li class="page-item"><a class="page-link" href="#" id="next-page">Suivant</a></li>
 			</ul>
 		</nav>
@@ -253,7 +234,7 @@
 
 </div>
 
-<!-- Modal for Voir les détails -->
+<!-- Voir les détails -->
 <div class="modal fade" id="detailsModal" tabindex="-1" aria-labelledby="detailsModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-lg">
 		<div class="modal-content">
@@ -281,7 +262,6 @@
 	</div>
 </div>
 
-<!-- Modal for reserveModal -->
 <div class="modal fade" id="reserveModal" tabindex="-1" aria-labelledby="reserveModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-lg">
 		<div class="modal-content">
@@ -306,11 +286,11 @@
 							<div class="tab-content" id="v-pills-tabContent">
 								<div class="tab-pane fade show active" id="v-pills-enseignants" role="tabpanel"
 									aria-labelledby="v-pills-enseignants-tab">
-									<!-- Контент для Enseignants будет сгенерирован здесь -->
+									<!-- contenu pour enseignants -->
 								</div>
 								<div class="tab-pane fade" id="v-pills-etudiants" role="tabpanel"
 									aria-labelledby="v-pills-etudiants-tab">
-									<!-- Контент для Étudiants будет сгенерирован здесь -->
+									<!-- pour étudiants -->
 								</div>
 							</div>
 						</div>
@@ -321,7 +301,7 @@
 						<ul class="pagination justify-content-center">
 							<li class="page-item disabled"><a class="page-link" href="#" tabindex="-1"
 									aria-disabled="true">Précédent</a></li>
-							<!-- Нумерация страниц будет сгенерирована здесь -->
+							<!-- numération des pages dynamiques -->
 							<li class="page-item"><a class="page-link" href="#">Suivant</a></li>
 						</ul>
 					</nav>
