--- a/germax-frontend/src/templates/components/content-page-loan-equipment/index.css
+++ b/germax-frontend/src/templates/components/content-page-loan-equipment/index.css
@@ -7,9 +7,6 @@
 	gap: 50px;
 }
 
-/* index.css */
-
-/* Цветовая палитра */
 :root {
 	--primary-color: #E7717D;
 	--secondary-color: #C2CAD0;
@@ -72,7 +69,7 @@
 	border-radius: 10px;
 	padding: 20px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-	flex: 1 0 21%; /* fallback for older browsers */
+	flex: 1 0 21%;
 	flex: 1 0 calc(25% - 20px);
 	box-sizing: border-box;
 }
@@ -142,8 +139,8 @@
 }
 
 #request-button {
-	font-size: 1.2rem; /* Увеличение размера шрифта */
-	padding: 1rem 1.5rem; /* Увеличение отступов внутри кнопки */
+	font-size: 1.2rem;
+	padding: 1rem 1.5rem;
 }
 
 .pagination-container {
@@ -182,27 +179,27 @@
 /* retour en arrière */
 #backArrowContainer {
 	position: fixed;
-	top: 71px; /* Отрегулируйте это значение по необходимости */
-	left: 10px; /* Почти прижата к левому краю страницы */
+	top: 71px;
+	left: 10px;
 	z-index: 1000;
 }
 
 .back-arrow {
-	font-size: 20px; /* Сделаем кнопку жирнее */
+	font-size: 20px;
 	color: var(--primary-color);
 	text-decoration: none;
 	display: flex;
 	align-items: center;
-	transition: color 0.3s ease, opacity 0.3s ease; /* Добавим плавный переход для непрозрачности */
+	transition: color 0.3s ease, opacity 0.3s ease;
 	padding: 10px;
 	border-radius: 5px;
-	opacity: 0.3; /* Полупрозрачная кнопка */
+	opacity: 0.3;
 }
 
 .back-arrow:hover {
 	color: var(--accent-color);
 	text-decoration: underline;
-	opacity: 1; /* Увеличим непрозрачность при наведении */
+	opacity: 1;
 }
 
 .back-arrow i {
