--- a/germax-frontend/src/templates/components/content-page-order-new-equipment/index.css
+++ b/germax-frontend/src/templates/components/content-page-order-new-equipment/index.css
@@ -6,16 +6,16 @@ tr.in-progress {
 }
 
 .highlight {
-	background-color: #f9f9f9; /* Цвет фона для выделенных строк */
+	background-color: #f9f9f9;
 }
 
 .highlight-border {
-	border: 2px solid #ccc; /* Граница для группы строк */
-	margin-bottom: 10px; /* Отступ между группами строк */
-	border-radius: 5px; /* Скругление углов */
+	border: 2px solid #ccc;
+	margin-bottom: 10px;
+	border-radius: 5px;
 }
 
-/* Основные цвета */
+
 :root {
 	--primary-color: #E7717D;
 	--secondary-color: #C2CAD0;
@@ -32,27 +32,25 @@ body, html {
 body {
 	display: flex;
 	flex-direction: column;
-	min-height: 100vh; /* Устанавливаем минимальную высоту */
+	min-height: 100vh;
 }
 
 main {
-	flex: 1; /* Раздвигаем основной контент */
+	flex: 1;
 }
 
-/* Стили для хедера */
+
 header {
 	background-color: var(--primary-color);
 	color: white;
 	padding: 1rem;
 }
 
-/* Общие стили для контейнера */
 .container {
-	padding-top: 60px; /* Отступ сверху для фиксированного хедера */
+	padding-top: 60px;
 	padding-bottom: 20px;
 }
 
-/* Стили для навигации */
 .navbar-brand {
 	color: var(--primary-color);
 }
@@ -140,7 +138,6 @@ header {
 	background-color: var(--accent-color);
 }
 
-/* Дополнительные стили для форм и таблиц на странице заказов */
 #titleAddingOrders, #titleOrders, #listOrdersTitle, #titleOrdersRequest {
 	color: var(--quaternary-color);
 	font-weight: bold;
@@ -159,7 +156,6 @@ header {
 	margin-top: 20px;
 }
 
-/* Стили для кнопок действий в таблице */
 .dropdown-item {
 	color: var(--quaternary-color);
 }
@@ -179,7 +175,6 @@ header {
 	color: white;
 }
 
-/* Модальные окна */
 .modal-content {
 	background-color: var(--secondary-color);
 	border-radius: 10px;
@@ -211,7 +206,6 @@ header {
 	background-color: var(--accent-color);
 }
 
-/* Стили для формы в модальных окнах */
 .form-label {
 	color: var(--quaternary-color);
 }
@@ -228,14 +222,14 @@ header {
 }
 
 #equipmentRequestButton {
-	background-color: var(--primary-color); /* Цвет кнопки */
+	background-color: var(--primary-color);
 	color: white;
 	border: none;
 	transition: background-color 0.3s ease;
 }
 
 #equipmentRequestButton:hover {
-	background-color: var(--accent-color); /* Цвет кнопки при наведении */
+	background-color: var(--accent-color);
 	color: white;
 }
 
@@ -267,30 +261,29 @@ header {
 	background-color: var(--accent-color);
 }
 
-/* retour en arrière */
 #backArrowContainer {
 	position: fixed;
-	top: 80px; /* Отрегулируйте это значение по необходимости */
-	left: 10px; /* Почти прижата к левому краю страницы */
+	top: 80px;
+	left: 10px;
 	z-index: 1000;
 }
 
 .back-arrow {
-	font-size: 20px; /* Сделаем кнопку жирнее */
+	font-size: 20px;
 	color: var(--primary-color);
 	text-decoration: none;
 	display: flex;
 	align-items: center;
-	transition: color 0.3s ease, opacity 0.3s ease; /* Добавим плавный переход для непрозрачности */
+	transition: color 0.3s ease, opacity 0.3s ease;
 	padding: 10px;
 	border-radius: 5px;
-	opacity: 0.3; /* Полупрозрачная кнопка */
+	opacity: 0.3;
 }
 
 .back-arrow:hover {
 	color: var(--accent-color);
 	text-decoration: underline;
-	opacity: 1; /* Увеличим непрозрачность при наведении */
+	opacity: 1;
 }
 
 .back-arrow i {
