--- a/germax-frontend/src/templates/components/content-page-orders/index.css
+++ b/germax-frontend/src/templates/components/content-page-orders/index.css
@@ -1,6 +1,6 @@
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css);
-/* Основные цвета */
+
 :root {
 	--primary-color: #E7717D;
 	--secondary-color: #C2CAD0;
@@ -14,13 +14,12 @@
 #equipmentByModels {
     color: var(--darker-quaternary-color);
     font-weight: bold;
-    font-size: 1.5rem; /* Вы можете изменить размер шрифта по своему усмотрению */
+    font-size: 1.5rem;
 }
 
-/* Расположение #titleAddingOrders ниже на странице */
 #titleAddingOrders {
     position: relative;
-    margin-top: 50px; /* Добавляем отступ сверху, чтобы опустить его ниже */
+    margin-top: 50px;
 }
 
 
@@ -32,14 +31,14 @@ body, html {
 body {
 	display: flex;
 	flex-direction: column;
-	min-height: 100vh; /* Устанавливаем минимальную высоту */
+	min-height: 100vh;
 }
 
 main {
-	flex: 1; /* Раздвигаем основной контент */
+	flex: 1;
 }
 
-/* Стили для хедера */
+
 header {
 	background-color: var(--primary-color);
 	color: white;
@@ -48,7 +47,7 @@ header {
 
 /* Общие стили для контейнера */
 .container {
-	padding-top: 60px; /* Отступ сверху для фиксированного хедера */
+	padding-top: 60px;
 	padding-bottom: 20px;
 }
 
@@ -140,7 +139,6 @@ header {
 	background-color: var(--accent-color);
 }
 
-/* Дополнительные стили для форм и таблиц на странице заказов */
 #titleOrders, #listOrdersTitle, #titleOrdersRequest {
 	color: var(--quaternary-color);
 	font-weight: bold;
@@ -158,7 +156,6 @@ header {
 	margin-top: 20px;
 }
 
-/* Стили для кнопок действий в таблице */
 .dropdown-item {
 	color: var(--quaternary-color);
 }
@@ -178,7 +175,6 @@ header {
 	color: white;
 }
 
-/* Модальные окна */
 .modal-content {
 	background-color: var(--secondary-color);
 	border-radius: 10px;
@@ -210,7 +206,6 @@ header {
 	background-color: var(--accent-color);
 }
 
-/* Стили для формы в модальных окнах */
 .form-label {
 	color: var(--quaternary-color);
 }
@@ -227,14 +222,14 @@ header {
 }
 
 #equipmentRequestButton {
-	background-color: var(--primary-color); /* Цвет кнопки */
+	background-color: var(--primary-color);
 	color: white;
 	border: none;
 	transition: background-color 0.3s ease;
 }
 
 #equipmentRequestButton:hover {
-	background-color: var(--accent-color); /* Цвет кнопки при наведении */
+	background-color: var(--accent-color);
 	color: white;
 }
 
@@ -315,7 +310,6 @@ header {
 	color: var(--white-color);
 }
 
-/* Стили для кнопки "Attribuer l'équipement" */
 .btn-primary {
 	background-color: var(--primary-color);
 	color: white;
@@ -328,35 +322,33 @@ header {
 	color: white;
 }
 
-/* Перемещение заголовка ниже хедера */
 #titleOrders {
-	margin-top: 20px; /* Отступ для перемещения ниже хедера */
+	margin-top: 20px;
 }
 
-/* retour en arrière */
 #backArrowContainer {
 	position: fixed;
-	top: 71px; /* Отрегулируйте это значение по необходимости */
-	left: 10px; /* Почти прижата к левому краю страницы */
+	top: 71px;
+	left: 10px;
 	z-index: 1000;
 }
 
 .back-arrow {
-	font-size: 20px; /* Сделаем кнопку жирнее */
+	font-size: 20px;
 	color: var(--primary-color);
 	text-decoration: none;
 	display: flex;
 	align-items: center;
-	transition: color 0.3s ease, opacity 0.3s ease; /* Добавим плавный переход для непрозрачности */
+	transition: color 0.3s ease, opacity 0.3s ease;
 	padding: 10px;
 	border-radius: 5px;
-	opacity: 0.3; /* Полупрозрачная кнопка */
+	opacity: 0.3;
 }
 
 .back-arrow:hover {
 	color: var(--accent-color);
 	text-decoration: underline;
-	opacity: 1; /* Увеличим непрозрачность при наведении */
+	opacity: 1;
 }
 
 .back-arrow i {
