--- a/germax-frontend/src/templates/components/content-page-orders/index.html
+++ b/germax-frontend/src/templates/components/content-page-orders/index.html
@@ -2,16 +2,15 @@
 	aria-labelledby="commandes-equipement-link">
 	<div id="backArrowContainer"></div>
 
-	<!-- Заголовок Добавления оборудования для менеджера -->
 	<div id="titleAddingOrders"></div>
 	<div id="equipmentAddingContainer"></div>
 	<div id="titleOrdersRequest"></div>
 
-	<!-- Заголовок Заказов для менеджера -->
+
 	<div id="titleOrders"></div>
-	<!-- Новая форма для заказа для менеджера -->
+
 	<div id="orderForm"></div>
-	<!-- Заголовок список заказов для менеджера -->
+
 	<div id="listOrdersTitle"></div>
 
 	<div id="equipmentByModels">Liste des équipements par modèles</div>
@@ -34,7 +33,7 @@
 				</div>
 				<div class="col-md-9">
 					<div class="equipment-list" id="equipment-list">
-						<!-- Сюда будут загружаться результаты -->
+
 					</div>
 				</div>
 			</div>
@@ -42,7 +41,7 @@
 	</form>
 
 
-	<!-- Modal for Adding Equipment -->
+	<!-- Modal -->
 	<div class="modal fade" id="addEquipmentModal" tabindex="-1" aria-labelledby="addEquipmentModalLabel"
 		aria-hidden="true">
 		<div class="modal-dialog">
@@ -68,7 +67,6 @@
 								<option value="4">Accessory</option>
 								<option value="5">Tablet</option>
 								<option value="6">VR Headset</option>
-								<!-- нужно добавить чтобы категории динамически обновлялись -->
 							</select>
 						</div>
 						<div class="form-group">
@@ -98,9 +96,6 @@
 		</div>
 	</div>
 
-
-
-	<!-- Modal for Adding Category -->
 	<div class="modal fade show active" id="addCategoryModal" tabindex="-1" aria-labelledby="addCategoryModalLabel"
 		aria-hidden="true">
 		<div class="modal-dialog">
@@ -145,7 +140,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<!-- Динамически загружаемые строки будут добавлены здесь -->
+
 			</tbody>
 		</table>
 	</div>
@@ -155,7 +150,7 @@
 		<button id="nextPageBtn" class="btn btn-primary">Suivant</button>
 	</div>
 
-	<!-- Modal for Checking Availability -->
+
 	<div class="modal fade" id="availabilityModal" tabindex="-1" aria-labelledby="availabilityModalLabel"
 		aria-hidden="true">
 		<div class="modal-dialog">
@@ -181,7 +176,6 @@
 
 </div>
 
-<!-- Modal for Viewing Units -->
 <div class="modal fade" id="unitsModal" tabindex="-1" aria-labelledby="unitsModalLabel" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
@@ -190,7 +184,7 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<!-- Контент модального окна будет обновляться динамически -->
+
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
@@ -207,13 +201,13 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<!-- Форма для редактирования будет динамически добавлена сюда -->
+
 			</div>
 		</div>
 	</div>
 </div>
 
-<!-- Modal for Manager -->
+
 <div class="modal fade" id="reserveModal" tabindex="-1" aria-labelledby="reserveModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-lg">
 		<div class="modal-content">
@@ -238,11 +232,11 @@
 							<div class="tab-content" id="v-pills-tabContent">
 								<div class="tab-pane fade show active" id="v-pills-enseignants" role="tabpanel"
 									aria-labelledby="v-pills-enseignants-tab">
-									<!-- Контент для Enseignants будет сгенерирован здесь -->
+
 								</div>
 								<div class="tab-pane fade" id="v-pills-etudiants" role="tabpanel"
 									aria-labelledby="v-pills-etudiants-tab">
-									<!-- Контент для Étudiants будет сгенерирован здесь -->
+
 								</div>
 							</div>
 						</div>
@@ -253,7 +247,7 @@
 						<ul class="pagination justify-content-center">
 							<li class="page-item disabled"><a class="page-link" href="#" tabindex="-1"
 									aria-disabled="true">Précédent</a></li>
-							<!-- Нумерация страниц будет сгенерирована здесь -->
+
 							<li class="page-item"><a class="page-link" href="#">Suivant</a></li>
 						</ul>
 					</nav>
@@ -266,7 +260,7 @@
 	</div>
 </div>
 
-<!-- Units Modal -->
+
 <div class="modal fade" id="unitsModal" tabindex="-1" aria-labelledby="unitsModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-lg">
 		<div class="modal-content">
@@ -275,7 +269,7 @@
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
-				<!-- Контент для количества единиц оборудования будет сгенерирован здесь -->
+
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
