--- a/germax-frontend/src/components/content-auth/index.css
+++ b/germax-frontend/src/components/content-auth/index.css
@@ -42,7 +42,7 @@ section {
 	width: 566px;
 	height: 789px;
 	border-radius: 0px 30px 30px 0px;
-	background-image: url("../../../assets/images/resized_pexels-cup-of-couple-6177607.jpg");
+	background-image: url("../../assets/images/resized_pexels-cup-of-couple-6177607.jpg");
 }
 
 .link {
