--- a/germaloc-frontend/src/components/content-page-loan-equipment/index.css
+++ b/germaloc-frontend/src/components/content-page-loan-equipment/index.css
@@ -12,7 +12,7 @@
 	--secondary-color: #C2CAD0;
 	--tertiary-color: #C2B9B0;
 	--quaternary-color: #7E685A;
-	--accent-color: #AFD275;
+	--accent-color: #4C7C61;
 	--background-color: #F8F9FA;
 	--white-color: #ffffff;
 	--text-color: #343a40;
