--- a/germaloc-frontend/src/components/content-auth/index.css
+++ b/germaloc-frontend/src/components/content-auth/index.css
@@ -96,7 +96,7 @@ section {
 
 h1 {
 	color: white;
-	font-family: "Raleway", sans-serif;
+	font-family: "Montserrat", sans-serif;
 	font-weight: 600;
 	font-size: 40px;
 	margin-bottom: 15px;
@@ -104,7 +104,7 @@ h1 {
 
 h2 {
 	color: white;
-	font-family: "Raleway", sans-serif;
+	font-family: "Montserrat", sans-serif;
 	font-weight: 400;
 	font-size: 17px;
 	margin-bottom: 40px;
