--- a/germaloc-frontend/src/components/content-page-conditions-of-use/index.css
+++ b/germaloc-frontend/src/components/content-page-conditions-of-use/index.css
@@ -2,12 +2,13 @@
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css);
 
 body {
-	font-family: 'Roboto Mono', monospace;
+	font-family: 'Roboto', serif;
 	background-color: #C2B9B0;
 	color: #303C6C;
 }
 
 h1, h2 {
+	font-family: 'Montserrat', sans-serif;
 	color: #303C6C;
 }
 
