--- a/germaloc-frontend/src/components/content-auth/index.html
+++ b/germaloc-frontend/src/components/content-auth/index.html
@@ -77,6 +77,7 @@
 						<div class="error-container" id="errorTypePermission"></div>
 						<div id="facultyContainer" class="inputbox"></div>
 					</div>
+					<div class="g-recaptcha" data-sitekey="mon site"></div>
 					<button type="submit" class="btn btn-primary btn-block">Inscription</button>
 				</form>
 			</div>
